--- a/src/main/webapp/resources/css/mypage_matching_alarm_detail_list_page.css
+++ b/src/main/webapp/resources/css/mypage_matching_alarm_detail_list_page.css
@@ -447,3 +447,9 @@ ul.pagelist-container>li:not([class]) span.currpage {
     color: #0066ff;
     padding: 0.5em;
 }
+.list-control-container>a{
+	color : #0066ff;
+}
+.list-control-container>a:hover{
+	color : gold;
+}
