알림 서치바 간격조정

--- a/src/main/webapp/resources/css/mypage_matching_alarm_keyword_list_page.css
+++ b/src/main/webapp/resources/css/mypage_matching_alarm_keyword_list_page.css
@@ -132,6 +132,7 @@ a:hover{
   /* position: relative; */
   justify-content: space-between; 
   margin-bottom: 30px;
+  width: 1160px;
 }
 
 .searchbar-title {
